--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
@@ -81,6 +81,7 @@
   components:
   - type: BorgSwitchableType
     selectedBorgType: medical
+  - type: TTS # Corvax-TTS
 
 - type: entity
   id: BorgChassisService
