--- a/Resources/Prototypes/Entities/Mobs/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/base.yml
@@ -42,8 +42,16 @@
   - type: CameraRecoil
   - type: MindContainer
   - type: MovementSpeedModifier
+  - type: TTS # Corvax-TTS
   - type: RequireProjectileTarget
     active: False
+  - type: LanguageSpeaker
+  - type: LanguageKnowledge #backmen: languages
+    speaks:
+    - SpaceMob
+    understands:
+    - TauCetiBasic
+    - SpaceMob
   - type: StunVisuals
 
 - type: entity
