--- a/Resources/Prototypes/Entities/Structures/hydro_tray.yml
+++ b/Resources/Prototypes/Entities/Structures/hydro_tray.yml
@@ -93,6 +93,8 @@
     range: 5
     sound:
       path: /Audio/Ambience/Objects/flowing_water_open.ogg
+  - type: TTS # Corvax-TTS
+    voice: TrainingRobot
   - type: GuideHelp
     guides:
     - Botany
