--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -239,6 +239,7 @@
     - SiliconEmotes
     - Unimplantable
   - type: Emoting
+  - type: TTS # Corvax-TTS
   - type: GuideHelp
     guides:
     - Cyborgs
