--- a/Resources/Prototypes/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/pets.yml
@@ -873,6 +873,8 @@
     attributes:
       proper: true
       gender: female
+  - type: TTS # Corvax-TTS
+    voice: Aidar
 
 - type: entity
   name: Pun Pun
