--- a/Resources/Prototypes/_Erida/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/_Erida/Entities/Structures/Machines/vending_machines.yml
@@ -89,3 +89,30 @@
     radius: 1.5
     energy: 1.6
     color: "#e0f1ff"
+
+- type: entity
+  parent: VendingMachine
+  id: CaptainDrobe
+  name: CaptainDrobe
+  description: Stylish uniform, for a strong leader!
+  components:
+  - type: VendingMachine
+    pack: CaptainDrobeInventory
+    offState: off
+    brokenState: broken
+    normalState: normal-unshaded
+  - type: Sprite
+    sprite: _Erida/Structures/Machines/VendingMachines/captaindrobe.rsi
+    layers:
+    - state: "off"
+      map: ["enum.VendingMachineVisualLayers.Base"]
+    - state: "off"
+      map: ["enum.VendingMachineVisualLayers.BaseUnshaded"]
+      shader: unshaded
+    - state: panel
+      map: ["enum.WiresVisualLayers.MaintenancePanel"]
+  - type: PointLight
+    color: "#05DAF2"
+  - type: AccessReader
+    access: [["Captain"]]
+
