ЗаконШкаф + ключ шифрования юридического отдела

--- a/Resources/Prototypes/Roles/Jobs/Command/iaa.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/iaa.yml
@@ -37,6 +37,7 @@
   - Hydroponics
   - GenpopEnter
   - GenpopLeave
+  - Command
   special:
   - !type:AddImplantSpecial
     implants: [ MindShieldImplant ]
