аЭ, с первого раза не закомитило нужные файлы

--- a/Resources/Prototypes/Entities/Structures/Machines/telecomms.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/telecomms.yml
@@ -201,6 +201,7 @@
       - EncryptionKeySecurity
       - EncryptionKeyService
       - EncryptionKeyCommand
+      - EncryptionKeyLaw
 
 - type: entity
   parent: TelecomServer
@@ -281,3 +282,4 @@
     containers:
       key_slots:
       - EncryptionKeyCommand
+      - EncryptionKeyLaw
