--- a/Resources/Prototypes/Roles/Jobs/Civilian/lawyer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Civilian/lawyer.yml
@@ -27,6 +27,7 @@
     back:
     - RubberStampLawyer
     - BookSpaceLaw
+    - EncryptionKeyLaw
 
 - type: chameleonOutfit
   id: LawyerChameleonOutfit
