--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/lawdrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/lawdrobe.yml
@@ -12,10 +12,21 @@
     ClothingUniformJumpsuitLawyerGood: 1
     ClothingUniformJumpskirtLawyerGood: 1
     ClothingShoesBootsLaceup: 2
-    ClothingHeadsetService: 2
+    ClothingHeadsetSecurity: 2 # Corvax-IAA
+    EncryptionKeyLaw: 6
     ClothingNeckLawyerbadge: 2
     BriefcaseBrown: 2
     BookSpaceLaw: 3
+    # Corvax-LawyerDrip-Start
+    ClothingHandsGlovesColorWhite: 1
+    ClothingHandsGlovesColorGray: 1
+    ClothingHandsGlovesColorBlack: 1
+    ClothingHandsGlovesColorRed: 1
+    ClothingHandsGlovesColorBlue: 1
+    ClothingHeadHatBowlerHat: 1
+    ClothingHeadHatOutlawHat: 1
+    ClothingHeadHatTophat: 1
+    # Corvax-LawyerDrip-End
     LuxuryPen: 2
     HandLabeler: 2
   contrabandInventory:
@@ -24,3 +35,5 @@
     # "Legally" obtained currency
     SpaceCash100: 2
     ToyFigurineLawyer: 1
+  emaggedInventory:
+    CyberPen: 1
