--- a/Resources/Prototypes/Entities/Objects/Devices/encryption_keys.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/encryption_keys.yml
@@ -78,6 +78,7 @@
     - Security
     - Service
     - Supply
+    - EncryptionKeyLaw
     defaultChannel: Command
   - type: Sprite
     layers:
@@ -298,8 +299,27 @@
       - Common
       - Command
       - Security
+      - Law
       defaultChannel: Command
     - type: Sprite
       layers:
       - state: crypt_silver
       - state: nano_label
+
+- type: entity
+  parent: [ EncryptionKey, BaseSecurityLawyerContraband ]
+  id: EncryptionKeyLaw
+  name: law encryption key
+  description: An encryption key used by law.
+  components:
+  - type: EncryptionKey
+    channels:
+    - Law
+    defaultChannel: Law
+  - type: Sprite
+    layers:
+    - state: crypt_gray
+    - state: nano_label
+  - type: Tag
+    tags:
+    - EncryptionKeyLaw
