--- a/Resources/Prototypes/radio_channels.yml
+++ b/Resources/Prototypes/radio_channels.yml
@@ -113,3 +113,10 @@
   color: "#ff2222"
   # long range since I don't wanna make a special xenoborg telecomm server
   longRange: true
+
+- type: radioChannel
+  id: Law
+  name: chat-radio-law
+  keycode: 'ю' 
+  frequency: 2789
+  color: "#d98b71"
