--- a/Resources/Prototypes/Entities/Objects/Devices/encryption_keys.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/encryption_keys.yml
@@ -78,7 +78,7 @@
     - Security
     - Service
     - Supply
-    - EncryptionKeyLaw
+    - Law
     defaultChannel: Command
   - type: Sprite
     layers:
