--- a/Resources/Prototypes/Entities/Mobs/Player/guardian.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/guardian.yml
@@ -111,6 +111,27 @@
     - type: Tag
       tags:
         - CannotSuicide
+    - type: LanguageSpeaker #backmen: languages
+      currentLanguage: TauCetiBasic
+    - type: LanguageKnowledge
+      speaks:
+      - TauCetiBasic
+      - Nekomimetic
+      understands:
+      - Binary
+      - TauCetiBasic
+      - SolCommon
+      - RootSpeak
+      - Dwarven
+      - Garpy
+      - Moffic
+      - Nekomimetic
+      - Dragon
+      - Shadokin
+      - Slime
+      - Canilunzt
+      - Freespeak
+      - Spider
 
 # From the uplink injector
 - type: entity
