--- a/Resources/Prototypes/_Backmen/Entities/Mobs/Species/felinid.yml
+++ b/Resources/Prototypes/_Backmen/Entities/Mobs/Species/felinid.yml
@@ -50,6 +50,7 @@
     stealthy: true
     stripTimeReduction: 1
   - type: Speech
+    allowedEmotes: [ 'Mews', 'Meows', 'Purrs' ]
     speechSounds: Alto
   - type: DamageOnHighSpeedImpact
     damage:
