--- a/Resources/Prototypes/_Erida/Entities/Clothing/Head/hats.yml
+++ b/Resources/Prototypes/_Erida/Entities/Clothing/Head/hats.yml
@@ -8,6 +8,10 @@
     sprite: _Erida/Clothing/Head/Hats/white_beret.rsi
   - type: Clothing
     sprite: _Erida/Clothing/Head/Hats/white_beret.rsi
+  - type: Tag
+    tags:
+    - ClothMade
+    - WhitelistChameleon
 
 - type: entity
   parent: ClothingHeadBase
@@ -19,6 +23,10 @@
     sprite: _Erida/Clothing/Head/Hats/sheriff_beret.rsi
   - type: Clothing
     sprite: _Erida/Clothing/Head/Hats/sheriff_beret.rsi
+  - type: Tag
+    tags:
+    - ClothMade
+    - WhitelistChameleon
 
 - type: entity
   parent: ClothingHeadBase
@@ -33,6 +41,8 @@
   - type: Tag
     tags:
     - HamsterWearable
+    - WhitelistChameleon
+    - ClothMade
 
 - type: entity
   parent: ClothingHeadBase
@@ -47,4 +57,61 @@
   - type: Tag
     tags:
     - HamsterWearable
-    
+    - WhitelistChameleon
+    - ClothMade
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadPlet
+  name: wicker hat
+  description: The hat comes straight from the eastern part of the earth, where it is popular among tourists and fellow countrymen.
+  components:
+  - type: Sprite
+    sprite: _Erida/Clothing/Head/Hats/hatfriz.rsi
+  - type: Clothing
+    sprite: _Erida/Clothing/Head/Hats/hatfriz.rsi
+  - type: Tag
+    tags:
+    - WhitelistChameleon
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadHatChapa
+  name: headchap
+  description: church hat, great for weddings.
+  components:
+  - type: Sprite
+    sprite: _Erida/Clothing/Head/Hats/headchap.rsi
+  - type: Clothing
+    sprite: _Erida/Clothing/Head/Hats/headchap.rsi
+  - type: Tag
+    tags:
+    - WhitelistChameleon
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadJeester
+  name: jester's hat
+  description: there is definitely no rabbit in it
+  components:
+  - type: Sprite
+    sprite: _Erida/Clothing/Head/Hats/jeester.rsi
+  - type: Clothing
+    sprite: _Erida/Clothing/Head/Hats/jeester.rsi
+  - type: Tag
+    tags:
+    - WhitelistChameleon
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadSanabi
+  name: brigadier general hat
+  description: Smells like steel.
+  components:
+  - type: Sprite
+    sprite: _Erida/Clothing/Head/Hats/sanabi.rsi
+  - type: Clothing
+    sprite: _Erida/Clothing/Head/Hats/sanabi.rsi
+  - type: Tag
+    tags:
+    - WhitelistChameleon
