--- a/Resources/Prototypes/_Erida/Entities/Clothing/Uniforms/jumpskirts.yml
+++ b/Resources/Prototypes/_Erida/Entities/Clothing/Uniforms/jumpskirts.yml
@@ -9,3 +9,37 @@
   - type: Clothing
     sprite: _Erida/Clothing/Uniforms/Jumpskirt/white_captain.rsi
     
+- type: entity
+  parent: ClothingUniformBase
+  id: ClothingUniformJumpsuitmaidblack
+  name: Black Maid Costume
+  description: This appears to be a classic French maid costume.
+  components:
+    - type: Sprite
+      sprite: _Erida/Clothing/Uniforms/Jumpskirt/maid_black.rsi
+    - type: Clothing
+      sprite: _Erida/Clothing/Uniforms/Jumpskirt/maid_black.rsi
+
+
+- type: entity
+  parent: ClothingUniformBase
+  id: ClothingUniformJumpsuitmaidblue
+  name: Blue Maid Costume
+  description: It's the same as the black one, but blue, don't offend its owner ;)
+  components:
+    - type: Sprite
+      sprite: _Erida/Clothing/Uniforms/Jumpskirt/maid_blue.rsi
+    - type: Clothing
+      sprite: _Erida/Clothing/Uniforms/Jumpskirt/maid_blue.rsi
+
+
+- type: entity
+  parent: ClothingUniformBase
+  id: ClothingUniformJumpsuitmaidpink
+  name: Pink Maid Costume
+  description: It's the same as the black one, but blue, don't offend its owner ;)
+  components:
+    - type: Sprite
+      sprite: _Erida/Clothing/Uniforms/Jumpskirt/maid_pink.rsi
+    - type: Clothing
+      sprite: _Erida/Clothing/Uniforms/Jumpskirt/maid_pink.rsi
