--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/chapel.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/chapel.yml
@@ -5,10 +5,12 @@
     ClothingUniformJumpskirtChaplain: 2
     ClothingUniformJumpsuitMonasticRobeDark: 1
     ClothingUniformJumpsuitMonasticRobeLight: 1
+    ClothingWitchHunter: 1 #Erida
     ClothingNeckStoleChaplain: 1
     ClothingOuterHoodieChaplain: 1
     ClothingOuterHoodieBlack: 1
     ClothingHeadHatHoodNunHood: 1
+    ClothingHeadHatChapa: 1 #Erida
     ClothingOuterNunRobe: 1
     ClothingHeadHatFez: 1
     ClothingHeadHatPlaguedoctor: 1
@@ -17,6 +19,8 @@
     ClothingOuterPlagueSuit: 1
     ClothingMaskPlague: 1
     ClothingHeadsetService: 2
+    ClothingNeckCloakBlackCloak: 1 #Erida
+    ClothingNeckCloakWhiteCloak: 1 #Erida
     BoxCandle: 2
     BoxCandleSmall: 2
     Urn: 5
@@ -26,6 +30,8 @@
     DrinkWineBottleFull: 1
     ToyFigurineChaplain: 1
     ClothingNeckScarfStripedBlack: 3
+    ClothingGlavaKylt: 1 #Erida
+    ClothingPosledKylt: 3 #Erida
   emaggedInventory:
     ClothingOuterRobesCult: 3
     ClothingHeadHatHoodCulthood: 3
