--- a/Resources/Prototypes/Recipes/Lathes/Packs/clothing.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/clothing.yml
@@ -6,7 +6,12 @@
   - ClothingUniformJumpsuitColorGrey
   - ClothingUniformJumpskirtColorGrey
   - ClothingUniformJumpsuitLoungewear
-
+  #Erida-start
+  - ClothingUniformJumpsuitmaidblack
+  - ClothingUniformJumpsuitmaidblue
+  - ClothingUniformJumpsuitmaidpink
+  #Erida-End
+  
 - type: latheRecipePack
   id: ClothingCargo
   recipes:
