Добавил некоторые бутыли для РПС и изменил лодаут РПС ОСЩ

--- a/Resources/Prototypes/_Backmen/Catalog/Fills/Items/Belts/belts.yml
+++ b/Resources/Prototypes/_Backmen/Catalog/Fills/Items/Belts/belts.yml
@@ -5,7 +5,13 @@
   components:
   - type: StorageFill
     contents:
-      - id: MedkitCombatFilled
-      - id: Stunbaton
+      - id: HypoBlueShield
+      - id: ChemistryBottleOmnizine
+      - id: ChemistryBottleEpinephrine
+      - id: ChemistryBottleBicaridine
+      - id: ChemistryBottleArithrazine
+      - id: ChemistryBottleDexalin
+      - id: ChemistryBottleDermaline
+      - id: ChemistryBottleEphedrine
       - id: Handcuffs
       - id: Handcuffs
