--- a/Resources/Prototypes/_Backmen/Loadouts/Jobs/CentCom/blueshield.yml
+++ b/Resources/Prototypes/_Backmen/Loadouts/Jobs/CentCom/blueshield.yml
@@ -89,7 +89,7 @@
 #weapon
 - type: loadout
   id: WeaponSubMachineGunDrozd
-  equipment:
+  storage:
     back: 
     - WeaponSubMachineGunDrozd
     - MagazinePistolSubMachineGun
