--- a/Resources/Prototypes/_Corvax/Entities/Clothing/OuterClothing/coats.yml
+++ b/Resources/Prototypes/_Corvax/Entities/Clothing/OuterClothing/coats.yml
@@ -69,22 +69,12 @@
     - type: Clothing
       sprite: Corvax/Clothing/OuterClothing/Coats/sec_leather.rsi
     - type: Armor # Based on /tg/ but slightly compensated to fit the fact that armor stacks in SS14. :x:
-      coverage: # backmen: armour coverage
-      - Chest
-#      - Groin #Standart plate armor dont cover groin
-      traumaDeductions:
-        Dismemberment: 0.21
-        OrganDamage: 0.21
-        BoneDamage: 0.21
-        VeinsDamage: 0
-        NerveDamage: 0
       modifiers:
         coefficients:
           Blunt: 0.70
           Slash: 0.70
           Piercing: 0.60 #Can save you, but bullets will still hurt. Will take about 10 shots from a Viper before critting, as opposed to 7 while unarmored and 16~ with a bulletproof vest.
           Heat: 0.80
-          ArmorPiercing: 0.90
 
 - type: entity
   parent: ClothingOuterStorageBase
@@ -112,21 +102,14 @@
   - type: Clothing
     sprite: Corvax/Clothing/OuterClothing/Coats/captain.rsi
   - type: Armor
-    coverage:
-    - Groin
-    - Chest
-    - Arm
-    - Hand
-    - Leg
-    - Tail
     modifiers:
       coefficients:
         Blunt: 0.5
         Slash: 0.5
         Piercing: 0.6
-        ArmorPiercing: 0.7
         Heat: 0.5
-        Stun: 0.6
+  - type: StaminaResistance 
+    damageCoefficient: 0.65
 
 - type: entity
   parent: ClothingOuterStorageBase
@@ -139,16 +122,8 @@
   - type: Clothing
     sprite: Corvax/Clothing/OuterClothing/Coats/hop.rsi
   - type: Armor
-    coverage:
-    - Groin
-    - Chest
-    - Arm
-    - Hand
-    - Leg
-    - Tail
     modifiers:
       coefficients:
         Blunt: 0.9
         Slash: 0.9
         Piercing: 0.8
-        ArmorPiercing: 0.99
