--- a/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/special.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/special.yml
@@ -25,11 +25,18 @@
   - type: Tag
     tags:
       - SpreaderIgnore
-  # ERIDA-start ### dont modify other components, add changes to Airtight component
-  #- type: ApcPowerReceiver
-  #  powerLoad: 80
-  #- type: ExtensionCableReceiver
-  #- type: AirtightRequiresPower
+   # ERIDA-start
+  - type: Battery
+    maxCharge: 2000
+    startingCharge: 2000
+  - type: ApcPowerReceiverBattery
+    idleLoad: 60
+    batteryRechargeRate: 200
+    batteryRechargeEfficiency: 0.0 # temporarily no power draw because this was causing potentially SEIZURE inducing light flickering
+  - type: ApcPowerReceiver
+    powerLoad: 60
+  - type: ExtensionCableReceiver
+  - type: AirtightRequiresPower
   - type: Machine
     board: TinyFanCircuitboard
   - type: ContainerContainer
@@ -63,8 +70,8 @@
             max: 1
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
-  # Erida-end
 
+# Erida-end
 - type: entity
   id: AtmosDeviceFanDirectional
   name: directional fan
@@ -93,11 +100,18 @@
   - type: Tag
     tags:
       - SpreaderIgnore
-  # ERIDA-start  ### dont modify other components, add changes to Airtight component
-  #- type: ApcPowerReceiver
-  #  powerLoad: 80
- # - type: ExtensionCableReceiver
-  #- type: AirtightRequiresPower
+# ERIDA-start
+  - type: Battery
+    maxCharge: 2000
+    startingCharge: 2000
+  - type: ApcPowerReceiverBattery
+    idleLoad: 60
+    batteryRechargeRate: 200
+    batteryRechargeEfficiency: 0.0 # temporarily no power draw because this was causing potentially SEIZURE inducing light flickering
+  - type: ApcPowerReceiver
+    powerLoad: 60
+  - type: ExtensionCableReceiver
+  - type: AirtightRequiresPower
   - type: Machine
     board: TinyFanDirectionalCircuitboard
   - type: ContainerContainer
