--- a/Resources/Prototypes/Atmospherics/thresholds.yml
+++ b/Resources/Prototypes/Atmospherics/thresholds.yml
@@ -114,6 +114,57 @@
     threshold: 0.8 # danger below 80% nitrogen
   lowerWarnAround: !type:AlarmThresholdSetting
     threshold: 1.125 # warning below 90%
+    
+# ADT-Gas-Start
+- type: alarmThreshold
+  id: stationBZ
+  upperBound: !type:AlarmThresholdSetting
+    threshold: 0.005 # lightable beyond this concentration
+  upperWarnAround: !type:AlarmThresholdSetting
+    threshold: 0.5
+
+- type: alarmThreshold
+  id: stationPluoxium
+  upperBound: !type:AlarmThresholdSetting
+    threshold: 0.005 # lightable beyond this concentration
+  upperWarnAround: !type:AlarmThresholdSetting
+    threshold: 0.5
+
+- type: alarmThreshold
+  id: stationHydrogen
+  upperBound: !type:AlarmThresholdSetting
+    threshold: 0.005 # lightable beyond this concentration
+  upperWarnAround: !type:AlarmThresholdSetting
+    threshold: 0.5
+
+- type: alarmThreshold
+  id: stationNitrium
+  upperBound: !type:AlarmThresholdSetting
+    threshold: 0.005 # lightable beyond this concentration
+  upperWarnAround: !type:AlarmThresholdSetting
+    threshold: 0.5
+
+- type: alarmThreshold
+  id: stationHyperNoblium
+  upperBound: !type:AlarmThresholdSetting
+    threshold: 0.005 # lightable beyond this concentration
+  upperWarnAround: !type:AlarmThresholdSetting
+    threshold: 0.5
+
+- type: alarmThreshold
+  id: stationHealium
+  upperBound: !type:AlarmThresholdSetting
+    threshold: 0.005 # lightable beyond this concentration
+  upperWarnAround: !type:AlarmThresholdSetting
+    threshold: 0.5
+
+- type: alarmThreshold
+  id: stationZauker
+  upperBound: !type:AlarmThresholdSetting
+    threshold: 0.005 # lightable beyond this concentration
+  upperWarnAround: !type:AlarmThresholdSetting
+    threshold: 0.5
+#ADT-Gas-End
 
 - type: alarmThreshold
   id: freezerTemperature
