--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -219,6 +219,8 @@
     - FootstepSound
     - DoorBumpOpener
     - AnomalyHost
+  - type: Carriable
+    freeHandsRequired: 2
 
 - type: entity
   save: false
