--- a/Resources/Prototypes/_Backmen/Entities/Mobs/Species/felinid.yml
+++ b/Resources/Prototypes/_Backmen/Entities/Mobs/Species/felinid.yml
@@ -77,6 +77,7 @@
     interactSuccessString: hugging-success-generic
     interactSuccessSound: /Audio/Effects/thudswoosh.ogg
     messagePerceivedByOthers: hugging-success-generic-others
+  - type: CannotCarry
 
 
 - type: entity
