--- a/Resources/Prototypes/GameRules/unknown_shuttles.yml
+++ b/Resources/Prototypes/GameRules/unknown_shuttles.yml
@@ -46,7 +46,7 @@
     startAnnouncement: station-event-unknown-shuttle-incoming
     startAudio:
       path: /Audio/Announcements/attention.ogg
-    weight: 10 # 10 default
+    weight: 3 # Reduced from 10 to 3 to decrease frequency at low-medium pop
     reoccurrenceDelay: 30
     duration: 1
     maxOccurrences: 1 # should be the same as [copies] in shuttle_incoming_event.yml
@@ -159,7 +159,7 @@
   components:
   - type: StationEvent
     startAnnouncement: station-event-unknown-shuttle-incoming #!!
-    weight: 5 # Its just a big ship, so it needs to be rarer to be interesting.
+    weight: 3 # Reduced from 5 to 3 to maintain balance with new base weight
   - type: LoadMapRule
     preloadedGrid: Gym
 
@@ -229,7 +229,7 @@
   components:
   - type: StationEvent
     startAnnouncement: station-event-unknown-shuttle-incoming #!!
-    weight: 11 # this is higher because its just a little generic personal shuttle
+    weight: 5 # Reduced from 11 to 5 to maintain balance with new base weight
     maxOccurrences: 4
   - type: LoadMapRule
     preloadedGrid: Microshuttle
