--- a/Resources/Prototypes/GameRules/unknown_shuttles.yml
+++ b/Resources/Prototypes/GameRules/unknown_shuttles.yml
@@ -46,7 +46,7 @@
     startAnnouncement: station-event-unknown-shuttle-incoming
     startAudio:
       path: /Audio/Announcements/attention.ogg
-    weight: 3 # Reduced from 10 to 3 to decrease frequency at low-medium pop
+    weight: 3 # Erida
     reoccurrenceDelay: 30
     duration: 1
     maxOccurrences: 1 # should be the same as [copies] in shuttle_incoming_event.yml
@@ -159,7 +159,7 @@
   components:
   - type: StationEvent
     startAnnouncement: station-event-unknown-shuttle-incoming #!!
-    weight: 3 # Reduced from 5 to 3 to maintain balance with new base weight
+    weight: 3 # Erida
   - type: LoadMapRule
     preloadedGrid: Gym
 
@@ -229,7 +229,7 @@
   components:
   - type: StationEvent
     startAnnouncement: station-event-unknown-shuttle-incoming #!!
-    weight: 5 # Reduced from 11 to 5 to maintain balance with new base weight
+    weight: 5 # Erida
     maxOccurrences: 4
   - type: LoadMapRule
     preloadedGrid: Microshuttle
