--- a/Resources/Prototypes/Recipes/Lathes/Packs/science.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/science.yml
@@ -31,6 +31,8 @@
   - DeviceQuantumSpinInverter
   - DeviceDesynchronizer
   - ClothingBackpackHarmpack
+  - ClothingEyesHudDiagnostic # Backmen
+  - PersonalAI # Backmen
 
 - type: latheRecipePack
   id: ScienceClothing
