--- a/Resources/Prototypes/Entities/Structures/Storage/Crates/crates.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Crates/crates.yml
@@ -886,4 +886,4 @@
     hadOutline: true
   - type: StealthOnMove
     passiveVisibilityRate: -0.10
-    movementVisibilityRate: 0.10
+    movementVisibilityRate: 0.50 #Erida-Edit
