--- a/Resources/Prototypes/Entities/Structures/Storage/Closets/big_boxes.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Closets/big_boxes.yml
@@ -70,7 +70,7 @@
       hadOutline: true
     - type: StealthOnMove
       passiveVisibilityRate: -0.37
-      movementVisibilityRate: 0.20
+      movementVisibilityRate: 0.50 #Erida-Edit
 
 - type: entity
   id: BigBox
